RESOLVED FIXED13417
Repro crash when the first argument to getMatchedCSSRules is not an element
https://bugs.webkit.org/show_bug.cgi?id=13417
Summary Repro crash when the first argument to getMatchedCSSRules is not an element
mitz
Reported 2007-04-20 04:04:17 PDT
To reproduce, open the URL. The release build crashes, the debug build fails the ASSERT in Node::document().
Attachments
Add null check (2.74 KB, patch)
2007-04-20 04:05 PDT, mitz
darin: review+
mitz
Comment 1 2007-04-20 04:05:12 PDT
Created attachment 14108 [details] Add null check Includes layout test and change log.
Darin Adler
Comment 2 2007-04-20 08:05:38 PDT
Comment on attachment 14108 [details] Add null check r=me
Mark Rowe (bdash)
Comment 3 2007-04-21 01:33:41 PDT
Landed in r20993.
Note You need to log in before you can comment on or make changes to this bug.