2007-04-21  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13417
          Repro crash when the first argument to getMatchedCSSRules is not an element

        Test: fast/dom/Window/getMatchedCSSRules-null-crash.html

        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::styleRulesForElement): Added null check.

2007-04-21  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13417
          Repro crash when the first argument to getMatchedCSSRules is not an element

        * fast/dom/Window/getMatchedCSSRules-null-crash-expected.txt: Added.
        * fast/dom/Window/getMatchedCSSRules-null-crash.html: Added.


Canonical link: https://commits.webkit.org/17523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20993 268f45cc-cd09-0410-ab3c-d52691b4dbfc